--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,26 @@ td{
     background-color: rgb(82, 140, 248);
 }
 
-.footer-img{
-    display: block;
-    margin-bottom:1% ;
+.container1{
+    height: 208px;
+    width: 312px    ;
+    background-image: url("../img/monitor.jpg");
+    background-repeat: no-repeat;
+    margin-bottom: 2%;
+}
+
+.container2{
+    height: 208px;
+    width: 312px    ;
+    background-image: url("../img/graph.jpg");
+    background-repeat: no-repeat;
+       
+}
+
+.text{
+    font-size:x-large;
+    color: white;
+    position: relative;
+    top: 5%;
+    left: 5%;
 }
